Fix typo in strings file

--- a/godtools/en.lproj/Localizable.strings
+++ b/godtools/en.lproj/Localizable.strings
@@ -180,7 +180,7 @@ Let’s talk more!";
 
 /*GTViewController strings */
 "GTInputFieldView_validationMessage_empty"           = "%@ was empty";
-"GTInputFieldView_validationMessage_badFormat"       = "%%@ was not properly formatted";
+"GTInputFieldView_validationMessage_badFormat"       = "%@ was not properly formatted";
 
 "GTFollowupViewController_validation_title"          = "Please correct these fields:";
 
